[egg_info]
tag_build = 
tag_date = 0

[metadata]
license_file = LICENSE

[tool:pytest]
addopts = --tb native -v -r sfxX --maxfail=25 -p no:warnings -p no:logging
python_files = test/*test_*.py

[upload]
sign = 1
identity = C4DAFEE1

[flake8]
show-source = true
enable-extensions = G
ignore = 
	A003,
	D,
	E203,E305,E711,E712,E721,E722,E741,
	F821
	N801,N802,N806,
	RST304,RST303,RST299,RST399,
	W503,W504
exclude = .venv,.git,.tox,dist,doc,*egg,build
import-order-style = google
application-import-names = sqlalchemy,test

[sqla_testing]
requirement_cls = test.requirements:DefaultRequirements
profile_file = test/profiles.txt
oracle_db_link = test_link

[db]
default = sqlite:///:memory:
sqlite = sqlite:///:memory:
sqlite_file = sqlite:///querytest.db
postgresql = postgresql://scott:tiger@127.0.0.1:5432/test
pg8000 = postgresql+pg8000://scott:tiger@127.0.0.1:5432/test
postgresql_psycopg2cffi = postgresql+psycopg2cffi://scott:tiger@127.0.0.1:5432/test
mysql = mysql://scott:tiger@127.0.0.1:3306/test?charset=utf8mb4
pymysql = mysql+pymysql://scott:tiger@127.0.0.1:3306/test?charset=utf8mb4
mssql = mssql+pyodbc://scott:tiger@ms_2008
mssql_pymssql = mssql+pymssql://scott:tiger@ms_2008
oracle = oracle://scott:tiger@127.0.0.1:1521
oracle8 = oracle://scott:tiger@127.0.0.1:1521/?use_ansi=0
firebird = firebird://sysdba:masterkey@localhost//Users/classic/foo.fdb

