[tool:pytest]
testpaths = t/unit/
python_classes = test_*

[build_sphinx]
source-dir = docs/
build-dir = docs/_build
all_files = 1

[flake8]
ignore = W504, N806, N802, N801, N803

[pep257]
ignore = D102,D104,D203,D105,D213

[bdist_rpm]
requires = amqp >= 2.

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[egg_info]
tag_build = 
tag_date = 0

