[metadata]
name = mock
summary = Rolling backport of unittest.mock for all Pythons
home-page = http://mock.readthedocs.org/en/latest/
description-file = README.rst
author = Testing Cabal
author-email = testing-in-python@lists.idyll.org
license = OSI Approved :: BSD License
classifier = 
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	License :: OSI Approved :: BSD License
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: Implementation :: PyPy
	Topic :: Software Development :: Libraries
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Software Development :: Testing
keyword = 
	testing, test, mock, mocking, unittest, patching, stubs, fakes, doubles

[options]
install_requires = 
	six
	funcsigs>=1;python_version<"3.3"
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*
packages = mock

[options.extras_require]
docs = 
	sphinx
test = 
	pytest
	pytest-cov
build = 
	twine
	wheel
	blurb

[bdist_wheel]
universal = 1

[tool:pytest]
python_files = test*.py
filterwarnings = 
	ignore::DeprecationWarning

[egg_info]
tag_build = 
tag_date = 0

