[tool:pytest]
minversion = 3.0.1
strict = true
testpaths = tests

[sdist]
force_manifest = 1

[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[bdist_rpm]
release = 1
build-requires = openssl-devel python-devel python-sphinx
group = Development/Libraries
build_script = rpm/build_script
doc-files = doc/_build/html

[egg_info]
tag_build = 
tag_date = 0

