[tool:pytest]
addopts = --strict -ra
django_settings_module = pytest_django_test.settings_sqlite_file
testpaths = tests

[wheel]
universal = 1

[flake8]
ignore = W503
max-line-length = 99
exclude = lib/,src/,docs/,bin/

[isort]
forced_separate = tests,pytest_django,pytest_django_test

[metadata]
license_file = LICENSE

[egg_info]
tag_build = 
tag_date = 0

