[metadata]
name = python-pam
version = attr: pam.version.VERSION
author = David Ford
author_email = david@blue-labs.org
description = Python PAM module using ctypes, py3
long_description = file: README.md
long_description_content_type = text/markdown
license = License :: OSI Approved :: MIT License
url = https://github.com/FirefighterBlu3/python-pam
project_urls = 
	Bug Tracker = https://github.com/FirefighterBlu3/python-pam/issues
classifiers = 
	Development Status :: 6 - Mature
	Environment :: Plugins
	Intended Audience :: Developers
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: MIT License
	Operating System :: POSIX
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 3
	Topic :: Security
	Topic :: System :: Systems Administration :: Authentication/Directory

[options]
packages = find:
package_dir = 
	= src

[options.packages.find]
where = src

[sdist]
keep_temp = 1

[build_ext]
debug = 1

[flake8]
max-line-length = 120

[egg_info]
tag_build = 
tag_date = 0

