[nosetests]
nocapture = 1
cover-package = zope.interface
cover-erase = 1
cover-min-percentage = 100
cover-branches = 1
with-doctest = 0
where = src

[aliases]
dev = develop easy_install zope.interface[testing]
docs = easy_install zope.interface[docs]

[metadata]
license_file = LICENSE.txt

[bdist_wheel]
universal = 0

[egg_info]
tag_build = 
tag_date = 0

